style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    font-family:'Courier New', Courier, monospace;
    font-size: 16px;
    line-height: 1.5;
    color: #333;
    background: hsl(240, 4%, 16%);
}

.image{
    width: 50px;
    height: 50px;
}

.maincontainer{
    max-width: 80%;
    margin: auto;
    padding: 20px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-content: center;
    gap: 50px;
}

.container{
    max-width: 100%;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.navbar{
    background: #454545;
    color: white;
    height: 60px;
}

.navbar ul{
    display: flex;
}

.navbar ul li{
    margin-left: 20px;
}

.navbar a{
    color: white;
    text-decoration: none;
    font-size: 18px;
    font-weight: bold;
}

.navbar a:hover{
    color: lightblue
}

.card{
    background: white;
    border-radius: 10px;
    transition: transform .2s;
    padding: 30px;
    box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
    margin-bottom: 10px;
}

.card:hover{
    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
    transform: scale(1.1);
}

.card__header{
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.card__header h3{
    font-size: 15px;
}

.card__header p{
    opacity: 50%;
}

.card-black{
    background: hsl(240, 4%, 22%);
    
    color: #fff;
}

.card__img{
    width: 140px;
    height: 90px;
    border-radius: 10%;
    border: 2px solid #996ed9;
    margin-right: 10px;
}

.headerImage{
    height: 500px;
    background-image: url('images/guitarBackground.jpg');
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.headerImage:before{
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    background: rgba(0,0,0,0.5);
}

.headerImage h1{
    position: relative;
    font-size: 70px;
    color:#fff;
}

@media(max-width:768px){
    .maincontainer{
        grid-template-columns: 1fr;
        margin: 10px 25px;
    }
}
  

